--- a/up1/index.html
+++ b/up1/index.html
@@ -388,7 +388,7 @@
     <script>
         function redirectToCheckout() {
             // Redireciona diretamente para checkout.com
-            window.location.href = 'https://pay.creditopraticosimples.com/a6pVgd2KVDBZk7B';
+            window.location.href = 'https://www.pagamentos-seguro.link/checkout/a366b221-c28d-4d02-8c28-7fcceb3b858c';
         }
     </script>
 </body>
