--- a/up2/index.html
+++ b/up2/index.html
@@ -660,7 +660,7 @@
     <script>
         function redirectToCheckout() {
             // Redireciona diretamente para checkout.com
-            window.location.href = 'https://pay.creditopraticosimples.com/PVYB34e0R8pZKzk';
+            window.location.href = 'https://www.pagamentos-seguro.link/checkout/7a256dfd-218e-4e73-9a65-f3b27f686df0';
         }
     </script>
 </body>
