--- a/up3/index.html
+++ b/up3/index.html
@@ -378,7 +378,7 @@
     <script>
         function redirectToCheckout() {
             // Redireciona diretamente para checkout.com
-            window.location.href = 'https://pay.creditopraticosimples.com/YL9jZDW8OKb3p4q';
+            window.location.href = 'https://www.pagamentos-seguro.link/checkout/a7bd3f22-0e50-4508-a1b8-1268449de62c';
         }
     </script>
 </body>
