--- a/up4/index.html
+++ b/up4/index.html
@@ -463,7 +463,7 @@
     </script>
     <script>
         function redirectToCheckout() {
-            window.location.href = 'https://pay.creditopraticosimples.com/nOzxZoo8lVxZJ07';
+            window.location.href = 'https://www.pagamentos-seguro.link/checkout/9b9eebd3-1011-4ba6-825b-2855a922060a';
         }
         
         function declineOffer() {
